--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -1,18 +1,22 @@
 body {
   background-color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #000;
+}
+h2 {
+  font-size: 36px;
+  font-weight: 400;
 }
 .container {
   margin: 0 auto;
 }
-@media (min-width: 1200px) {
-  .container {
-    width: 1024px;
-  } 
-}
 .header {
   position: fixed;
   top: 0;
-  width: 1024px;
+  left: 0;
+  right: 0;
+  /* width: 1024px; */
   height: 56px;
   text-align: center;
   line-height: 54px;
@@ -27,17 +31,18 @@ body {
   vertical-align: -10px;
   margin-left: 10px;
 }
-.logo span {
+.logo h1 {
+  display: inline;
   margin-left: 5px;
-  color: #000;
   font-family: 'Righteous', sans-serif;
   font-size: 24px;
   font-weight: 400;
 }
+
+/* toggle header */
 .toggle-group p {
   display: inline;
   color: #4d4d4d;
-  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 500;
 }
@@ -94,4 +99,25 @@ body {
 }
 .switches input:checked { 
   z-index: 0;
+}
+
+/* content */
+.content {
+  margin-top: 56px;
+}
+section:first-child {
+  margin-top: 93px;
+}
+article {
+  border: 0.5px solid rgba(0,0,0,0.24);
+  background: #fafafa;
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.24);
+  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12);
+}
+
+
+@media (min-width: 800px) {
+  .container {
+    width: 800px;
+  } 
 }
