--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -119,6 +119,7 @@ section:first-child {
 }
 article {
   border: 0.5px solid rgba(0,0,0,0.24);
+  border-radius: 3px;
   background: #fafafa;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.24);
   box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12);
