--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -107,20 +107,53 @@ h2 {
 .content {
   margin: 0 auto;
   margin-top: 56px;
-  width: 800px;
+  margin-bottom: 10px;
+  max-width: 800px;
 }
 form {
   display: grid;
   grid-template-columns: repeat(2, minmax(100px, 386px));
-  grid-gap: 10px;
+  grid-gap: 28px;
 }
 section:first-child {
   margin-top: 93px;
 }
 article {
+  padding: 15px 22px 10px 25px;
   border: 0.5px solid rgba(0,0,0,0.24);
   border-radius: 3px;
   background: #fafafa;
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.24);
-  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
+}
+article h3 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+article .checkbox {
+  display: block;
+  margin-bottom: 12px;
+}
+.comment {
+  width: 100%;
+  height: 86px;
+  border: 1px solid #979797;
+}
+.btn {
+  background: #38B5C7;
+  border-radius: 4px;
+  font-size: 20px;
+  color: #FFFFFF;
+  border:  none;
+  cursor: pointer;
+  outline: none;
+}
+.btn:hover {
+  background: #3e62e2;
+}
+.btn-reset {
+  width: 290px;
+  height: 40px;
+  margin-top: 20px;
 }
