--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -14,6 +14,7 @@ h2 {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 3;
   height: 56px;
   text-align: center;
   line-height: 54px;
@@ -112,8 +113,9 @@ h2 {
 }
 form {
   display: grid;
-  grid-template-columns: repeat(2, minmax(100px, 386px));
+  grid-template-columns: repeat(2, minmax(288px, 386px));
   grid-gap: 28px;
+  grid-auto-rows: minmax(100px, auto);
 }
 section:first-child {
   margin-top: 93px;
@@ -139,6 +141,8 @@ article .checkbox {
   width: 100%;
   height: 86px;
   border: 1px solid #979797;
+  box-sizing: border-box;
+  resize: none;
 }
 .btn {
   background: #38B5C7;
@@ -150,10 +154,70 @@ article .checkbox {
   outline: none;
 }
 .btn:hover {
-  background: #3e62e2;
+  background: #0f9ec7;
 }
 .btn-reset {
   width: 290px;
   height: 40px;
   margin-top: 20px;
 }
+
+/* input style*/
+.checkbox {
+  display: block;
+  position: relative;
+  padding-left: 26px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  border: 2px solid;
+  border-radius: 2px;
+  opacity: 0.54;
+}
+.checkbox:hover input ~ .checkmark {
+  background-color: #009688;
+}
+.checkbox input:checked ~ .checkmark {
+  background-color: #009688;
+  opacity: 1;
+  border: none;
+  height: 18px;
+  width: 18px;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+.checkbox .checkmark:after {
+  left: 6px;
+  top: 1px;
+  width: 5px;
+  height: 10px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* end */
