index.html ew attribute in form (action). New @media screen in css

--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -276,6 +276,11 @@ article .checkbox {
     position: static;
   }
 }
+@media screen and (max-width: 768px) {
+  .checkbox:hover input ~ .checkmark {
+    background-color: transparent;
+  }
+}
 @media (max-width: 320px) {
   h2 {
     margin-top: 17px;
