--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -152,6 +152,10 @@ article .checkbox {
   box-sizing: border-box;
   resize: none;
 }
+.comment:focus {
+  outline: none;
+  box-shadow: 0 0 7px #38B5C7;
+}
 .btn {
   background: #38B5C7;
   border-radius: 4px;
@@ -281,16 +285,13 @@ article .checkbox {
     display: none;
   }
   section {
-    margin-bottom: 0;
+    margin-bottom: 34px;
   }
   article {
     padding: 17px 22px 10px 13px;
   }
-  .comment {
-    display: none;
-  }
   .btn-reset {
     width: 100%;
-    margin-top: 0;
+    margin-top: 11px;
   }
 }
