--- a/obeder/css/style.css
+++ b/obeder/css/style.css
@@ -8,6 +8,11 @@ h2 {
   font-size: 36px;
   font-weight: 400;
 }
+h1, h2 {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;    
+}
 header {
   position: fixed;
   top: 0;
@@ -20,12 +25,23 @@ header {
   background: #fff;
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
 }
+#logo {
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
 .logo {
   float: left;
 }
 .logo a {
   text-decoration: none;
   color: inherit;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none; 
 }
 .logo #logo {
   height: 36px;
@@ -154,7 +170,9 @@ article .checkbox {
 }
 .comment:focus {
   outline: none;
-  box-shadow: 0 0 7px #38B5C7;
+  -webkit-box-shadow: 0 0 7px rgba(56,181,199,0.7);
+  -moz-box-shadow: 0 0 7px rgba(56,181,199,0.7);
+  box-shadow: 0 0 7px rgba(56,181,199,0.7);
 }
 .btn {
   background: #38B5C7;
@@ -172,6 +190,11 @@ article .checkbox {
   width: 290px;
   height: 40px;
   margin-top: 20px;
+}
+.btn-dinner {
+  width: 139px;
+  height: 40px;
+  margin-top: 18px;
 }
 
 /* input style*/
@@ -234,10 +257,13 @@ article .checkbox {
 /* starting page*/
 .content-starting {
   display: grid;
-  grid-template-columns: repeat(1, minmax(160px, 360px));
+  grid-template-columns: repeat(1, minmax(160px, 266px));
   justify-content: center;
   text-align: center;
-  padding: 0 30px 0 25px;
+  padding: 55px 30px 0 25px;
+}
+.content-starting .header {
+  margin-bottom: 55px;
 }
 .content-starting .header a {
   color: #000;
@@ -246,13 +272,48 @@ article .checkbox {
   text-decoration: none;
 }
 .content-starting .header #logo {
-  width: 260px;
-  height: 260px;
+  width: 160px;
+  height: 160px;
 }
 .content-starting .header h1 {
   font-family: 'Righteous', sans-serif;
-  font-size: 50px;
-  margin: 10px 0 0;
+  font-size: 35px;
+  font-weight: 500;
+  margin: 3px 0 0;
+}
+.content-starting form {
+  display: grid;
+  grid-gap: 19px;
+}
+.content-starting input {
+  border: none;
+  border-bottom: 2px solid #979797;
+  font-style: italic;
+  font-size: 18px;
+  padding-bottom: 4px;
+  text-align: center;
+}
+.content-starting input::placeholder {
+  color: #898989;
+}
+.content-starting input:-ms-input-placeholder {
+  color: #898989;
+}
+.content-starting input::-ms-input-placeholder {
+  color: #898989;
+}
+.content-starting input:focus {
+  outline: none;
+  -webkit-box-shadow: 0 8px 18px -6px #38B5C7;
+  -moz-box-shadow: 0 8px 18px -6px #38B5C7;
+  box-shadow: 0 8px 18px -6px #38B5C7;
+}
+.small-text {
+  color: #898989;
+  font-size: 12px;
+  line-height: 14px;
+  margin-top: 24px;
+  margin-bottom: 0;
 }
 
 /* end */
